fix: Remove white background color of sort order button in dark mode

--- a/src/scss/components/_components.notelist.scss
+++ b/src/scss/components/_components.notelist.scss
@@ -128,6 +128,7 @@
     border: none;
     cursor: default;
     border-radius: 0.6rem;
+    background-color: transparent;
     
     .fas,
     .far {
